umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2-pyrazoline.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["N#h#n#v2" "N#n#v3" "C#h#v3" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :single] [1 2 :double] [2 3 :single] [3 4 :single] [4 0 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["N#h#n#v2" "N#n#v3" "C#h#v3" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :single] [1 2 :double] [2 3 :single] [3 4 :single] [4 0 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
