umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2H-azirine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "C#h#v3" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :double] [2 0 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "C#h#v3" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :double] [2 0 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
